# greenguardian

./: .gitignore  Dockerfile  README.md  docker-compose.yml
app/: .dockerignore  .flake8  Dockerfile  __init__.py  forms.py  models.py  pyproject.toml  requirements.txt  routes.py
app/migrations/versions/: 0533ac5f2ec2_add_plant.py  0dff5c41ed67_create_user.py  4764c84a42de_increase_length_of_password_hash_to_256.py
app/templates/: account.html  add_plant.html  base.html  edit_plant.html  home.html  login.html  notifications.html  plant_detail.html  plants_list.html  signup.html
greeting/: Dockerfile  MA_greeting.py
