[tool.poetry]
name = "greenguardian"
version = "0.1.0"
description = ""
authors = ["yshrkume <yshrkume@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]

[tool.poetry.group.dev.dependencies]
black = "^24.4.2"
isort = "^5.13.2"
flake8 = "^7.1.0"
flake8-mypy = "^17.8.0"
flake8-isort = "^6.1.1"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

[tool.black]
line-length = 120
target-version = ["py36"]

[tool.isort]
lexicographical = true
force_sort_within_sections = true
force_alphabetical_sort_within_sections = true
include_trailing_comma = true
multi_line_output = 3
use_parentheses = true
line_length = 119
single_line_exclusions = ["typing"]
